tests/machine/x/ocaml/right_join.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/right_join.ml", line 48, characters 186-188:
48 |             print_endline (__show ("Customer") ^ " " ^ __show (Obj.obj (List.assoc "customerName" entry)) ^ " " ^ __show ("has order") ^ " " ^ __show (Obj.obj (List.assoc "order" entry).id) ^ " " ^ __show ("- $") ^ " " ^ __show (Obj.obj (List.assoc "order" entry).total));
                                                                                                                                                                                               ^^
Error: Unbound record field id


Context (around line 48):
  46 |         try
  47 |           if Obj.obj (List.assoc "order" entry) then (
  48 |             print_endline (__show ("Customer") ^ " " ^ __show (Obj.obj (List.assoc "customerName" entry)) ^ " " ^ __show ("has order") ^ " " ^ __show (Obj.obj (List.assoc "order" entry).id) ^ " " ^ __show ("- $") ^ " " ^ __show (Obj.obj (List.assoc "order" entry).total));
  49 |           ) else (
  50 |             print_endline (__show ("Customer") ^ " " ^ __show (Obj.obj (List.assoc "customerName" entry)) ^ " " ^ __show ("has no orders"));
